feat: Introduce user authentication and a comprehensive inventory management API with items, locations, and inventory movements.

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,6 @@ pydantic
 pydantic-settings
 alembic
 python-multipart
-# Add any other dependencies if needed
+python-jose[cryptography]
+passlib[bcrypt]
+gunicorn
